[package]
name = "mini_test"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
toml = "0.5.6"
no_proto = "0.1.2"
serde_json = "1.0.57"
serde_derive = "1.0.115"
serde = {version = "1.0.115", features = ["derive"] }

#async-task = "3.0.0"
#net_ = { version = "0.1.0", path = "../engine"}
tokio = { version = "1.0.0", features = ["full"] }
mini_utils = { version = "0.1.0", path = "../mini_utils"}
mini_socket = { version = "0.1.0", path = "../mini_socket"}
hiredis-sys = { version = "0.1.0", path = "../hiredis-sys"}